--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1402,3 +1402,49 @@ h2.section-title,
   z-index: 200;
   /* Maior que o Navbar, mas menor que as sugestões */
 }
+
+/* Adicione estas classes se não existirem no arquivo style.css */
+.homePage {
+  width: 100%;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.pageContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.carouselSection {
+  margin: 40px 0;
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+  .carouselSection {
+    margin: 20px 0;
+  }
+}
+
+/* Adicione ao seu arquivo CSS */
+.underline-animation {
+  position: relative;
+}
+
+.underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: currentColor;
+  transition: width 0.3s ease;
+}
+
+.underline-animation:hover::after {
+  width: 100%;
+}
