--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,262 +1,281 @@
 /* Estilos para o Header */
 .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-self: stretch;
-    position: relative;
-    z-index: 14;
-  }
-  
-  .desconto {
-    display: flex;
-    padding: 10px;
-    height: 35px;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 10px;
-    align-self: stretch;
-    background-color: var(--fundo-texto-light);
-  }
-  
-  .desconto p {
-    color: var(--branco);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  
-  .buscaHeader {
-    position: relative;
-    transform: translateX(165px);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0 224px;
-    z-index: 16;
-  }
-  
-  .logo {
-    width: 184px;
-    height: 114px;
-    flex-shrink: 0;
-    aspect-ratio: 92/57;
-  }
-  
-  .iconsBusca {
-    margin-left: auto;
-    display: flex;
-    gap: 10px;
-    transform: translateX(-482px);
-    color: var(--cor-primaria);
-  }
-  
-  .userIcon {
-    color: var(--cor-primaria);
-    font-size: 16px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-  
-  .userIcon:hover {
-    transform: scale(1.5);
-  }
-  
-  /* Estilos para o Navbar */
-  .navbar {
-    position: relative;
-    display: flex;
-    padding: 10px 224px;
-    align-items: center;
-    gap: 32px;
-    align-self: stretch;
-    background: var(--fundo-texto-light);
-    z-index: 15;
-  }
-  
-  .navbar a {
-    color: var(--branco);
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration: none;
-    transition: color 0.3s ease;
-    position: relative;
-  }
-  
-  .navItemContainer {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .navItem {
-    color: var(--branco);
-    cursor: pointer;
-  }
-  
-  .activeNavItem {
-    color: var(--primaria-contraste) !important;
-    font-weight: 500;
-  }
-  
-  .tooltipArrow {
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 10px solid var(--branco);
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    z-index: 101;
-  }
-  
-  .navItemContainer.active .tooltipArrow {
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  /* Dropdown menu */
-  .dropdownMenu {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 400px;
-    height: 400px;
-    background-color: var(--branco);
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    z-index: 100;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-  }
-  
-  .dropdownContent {
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: flex-start;
-    align-items: stretch;
-  }
-  
-  .seeAllLink {
-    margin-bottom: 16px;
-    text-align: left;
-  }
-  
-  .seeAllLink a {
-    position: relative;
-    color: var(--cinza) !important;
-    font-size: 12px !important;
-    text-decoration: none;
-    transition: color 0.3s ease;
-    display: inline-block;
-    padding-bottom: 3px;
-    overflow: visible;
-  }
-  
-  .seeAllLink a::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    background-color: var(--cinza);
-    transition: width 0.7s ease-in-out;
-    opacity: 1;
-  }
-  
-  .seeAllLink a:hover {
-    color: var(--cinza) !important;
-  }
-  
-  .seeAllLink a:hover::after {
-    width: 100%;
-  }
-  
-  .dropdownItems {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    padding-left: 24px;
-    padding-right: 0;
-    margin-left: 0;
-    margin-right: auto;
-    width: 100%;
-  }
-  
-  .dropdownItem a {
-    position: relative;
-    color: var(--preto) !important;
-    font-size: 18px !important;
-    text-decoration: none;
-    transition: all 0.3s ease;
-    display: inline-block;
-    padding-bottom: 3px;
-    overflow: hidden;
-  }
-  
-  .dropdownItem a::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    bottom: 0;
-    right: 100%;
-    background-color: var(--cor-primaria);
-    transition: right 0.7s ease-in-out;
-  }
-  
-  .dropdownItem a:hover {
-    color: var(--cor-primaria) !important;
-  }
-  
-  .dropdownItem a:hover::after {
-    right: 0;
-  }
-  
-  /* Estilos para o ícone do carrinho */
-  .cartIconWrapper {
-    position: relative;
-    display: inline-block;
-    margin: 0 10px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-  
-  .cartIconWrapper:hover {
-    transform: scale(1.5);
-  }
-  
-  .cartCount {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    background-color: var(--cor-primaria);
-    color: white;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    font-weight: bold;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease;
-    transform: translate(5.5px, -3.5px);
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
+  position: relative;
+  z-index: 14;
+}
+
+.desconto {
+  display: flex;
+  padding: 10px;
+  height: 35px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  align-self: stretch;
+  background-color: var(--fundo-texto-light);
+}
+
+.desconto p {
+  color: var(--branco);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.buscaHeader {
+  display: flex;
+  align-items: center;
+  gap: 32px; /* Espaçamento entre logo, barra de busca e ícones */
+  width: 100%;
+  padding: 0 304px;
+  z-index: 16;
+}
+
+.logo {
+  width: 184px;
+  height: 114px;
+  flex-shrink: 0;
+  aspect-ratio: 92/57;
+}
+
+.iconsBusca {
+  display: flex;
+  align-items: center;
+  gap: 16px; /* Espaçamento entre os ícones */
+  color: var(--cor-primaria);
+  z-index: 17; /* Certifique-se de que os ícones fiquem acima da barra de pesquisa */
+}
+
+.userIconWrapper {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.userIcon {
+  font-size: 16px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.userIconWrapper:hover .userIcon {
+  transform: scale(1.5);
+}
+
+.cartIconWrapper {
+  font-size: 16px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.cartIconWrapper:hover {
+  transform: scale(1.5);
+}
+
+/* Estilos para o Navbar */
+.navbar {
+  position: relative;
+  display: flex;
+  padding: 10px 224px;
+  align-items: center;
+  gap: 32px;
+  align-self: stretch;
+  background: var(--fundo-texto-light);
+  z-index: 15;
+}
+
+.navbar a {
+  color: var(--preto);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  position: relative;
+}
+
+.navItemContainer {
+  position: relative;
+  display: inline-block;
+}
+
+.navItem {
+  color: var(--branco);
+  cursor: pointer;
+}
+
+.activeNavItem {
+  color: var(--primaria-contraste) !important;
+  font-weight: 500;
+}
+
+.tooltipArrow {
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 10px solid var(--branco);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 101;
+}
+
+.navItemContainer.active .tooltipArrow {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Dropdown menu */
+.dropdownMenu {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 400px;
+  height: 400px;
+  background-color: var(--branco);
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.dropdownContent {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.seeAllLink {
+  margin-bottom: 16px;
+  text-align: left;
+}
+
+.seeAllLink a {
+  position: relative;
+  color: var(--cinza) !important;
+  font-size: 12px !important;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  display: inline-block;
+  padding-bottom: 3px;
+  overflow: visible;
+}
+
+.seeAllLink a::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--cinza);
+  transition: width 0.7s ease-in-out;
+  opacity: 1;
+}
+
+.seeAllLink a:hover {
+  color: var(--cinza) !important;
+}
+
+.seeAllLink a:hover::after {
+  width: 100%;
+}
+
+.dropdownItems {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  padding-left: 24px;
+  padding-right: 0;
+  margin-left: 0;
+  margin-right: auto;
+  width: 100%;
+}
+
+.dropdownItem a {
+  position: relative;
+  color: var(--preto) !important;
+  font-size: 18px !important;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  display: inline-block;
+  padding-bottom: 3px;
+  overflow: hidden;
+}
+
+.dropdownItem a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  right: 100%;
+  background-color: var(--cor-primaria);
+  transition: right 0.7s ease-in-out;
+}
+
+.dropdownItem a:hover {
+  color: var(--cor-primaria) !important;
+}
+
+.dropdownItem a:hover::after {
+  right: 0;
+}
+
+.navItemContainer.active .dropdownItem a:hover::after {
+  right: 0; /* Move a linha para dentro do elemento */
+}
+
+.navItemContainer.active .dropdownItem a:hover {
+  color: var(--cor-primaria) !important;
+}
+
+/* Estilos para o ícone do carrinho */
+.cartIconWrapper {
+  position: relative;
+  display: inline-block;
+  margin: 0 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.cartIconWrapper:hover {
+  transform: scale(1.5);
+}
+
+.cartCount {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: var(--cor-primaria);
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: bold;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+  transform: translate(5.5px, -3.5px);
+}
