--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,4 @@
+
 /* Estilos para o Header */
 .header {
   display: flex;
@@ -6,7 +7,7 @@
   align-self: stretch;
   position: relative;
   z-index: 14;
-  background-color: white;
+  background-color: var();
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
