--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -118,6 +118,7 @@
   transition: background-color 0.3s ease;
   width: 100%;
   margin-top: 10px;
+  border-radius: 24px;
 }
 
 .productButton:hover {
