--- a/src/components/ProdutosCaroussel/Produtocarousel.module.css
+++ b/src/components/ProdutosCaroussel/Produtocarousel.module.css
@@ -217,6 +217,19 @@
   transform: scale(1.05);
 }
 
+.discountTag {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: var(--cor-primaria);
+  color: white;
+  padding: 4px 8px;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 4px;
+  z-index: 2;
+}
+
 .productRating {
   display: flex;
   justify-content: center;
@@ -280,7 +293,7 @@
   color: white;
   border: none;
   padding: 10px 15px;
-  border-radius: 4px;
+  border-radius: 24px;
   font-weight: 500;
   cursor: pointer;
   transition: background-color 0.3s ease;
